# airllm

./: .dockerignore  Dockerfile  FIXES.md  MODEL_BACKUP_RESTORE.md  Makefile  OPTIMIZATION_GUIDE.md  README.md  TESTED_MODELS.md  docker-compose.openwebui.yml  requirements.txt  test_rotary_cache_optimization.py
.github/workflows/: publish-ghcr.yml  release-native.yml
air_llm/: README.md  airllm_server.py  pyproject.toml  setup.py
air_llm/airllm/: __init__.py  _sentencepiece_compat.py  airllm_base.py  airllm_deepseek_v3.py  airllm_gpt_oss.py  airllm_llama_mlx.py  airllm_minimax.py  airllm_mllama.py  airllm_qwen3_moe.py  airllm_speecht5.py  auto_model.py  device_utils.py  tokenization_baichuan.py  utils.py
air_llm/airllm/server/: __init__.py  app.py  cli.py  config.py  model_store.py  runner.py  schemas.py
air_llm/examples/: query_served_model_text.py  test_served_model_transcription.py
air_llm/scripts/: build_native.sh  build_native_standalone.sh
air_llm/tests/: test_automodel.py  test_device_utils.py  test_real_model_backends.py  test_sentencepiece_compat.py  test_server_app_tools.py  test_server_runner.py  test_single_file_model.py  test_xpu.py
scripts/: run_deepseek_v31_lowvram_chat.py
