[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "airllm"
version = "2.12.0"
description = "AirLLM: run 70B LLMs on a single 4GB GPU without quantization, distillation, or pruning."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.10",
    "transformers>=5.3",
    "accelerate>=1.13",
    "safetensors>=0.7",
    "huggingface-hub>=1.7",
    "tqdm>=4.65",
    "sentencepiece>=0.2",
    "scipy>=1.11",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "requests>=2.31",
]

[project.scripts]
airllm = "airllm.server.cli:main"
airllm-server = "airllm.server.cli:main"

[project.optional-dependencies]
# 4-bit / 8-bit block-wise quantization (NVIDIA GPU only)
compression = ["bitsandbytes>=0.49"]
# GPT-OSS / MXFP4 expert kernels
gpt-oss = ["kernels"]
# Intel / AMD integrated GPU on Windows
directml = ["torch-directml"]
# Apple Silicon (MLX backend)
macos = ["mlx"]
# Testing
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["airllm*"]

# ---------------------------------------------------------------------------
# uv: pull PyTorch from the official CUDA 12.8 wheel index on Linux/Windows.
# CUDA 12.8 is the latest CUDA release with published PyTorch wheels.
# (CUDA 13.x wheels will be added here once PyTorch publishes them.)
# On macOS, torch falls back to the default PyPI index (CPU + MPS builds).
# The index is marked `explicit = true` so only torch uses it; all other
# packages are still resolved from PyPI as normal.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
